--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -164,9 +164,10 @@
 
                 <include layout="@layout/vertical_separator" />
 
-                <FrameLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -178,7 +179,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/horizontal_spacing_small"
-                        android:layout_gravity="center_vertical|end"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
                         <TextView
@@ -200,9 +200,15 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:text="@string/min_s"/>
+                    </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/horizontal_spacing_small"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
                         <TextView
-                            android:layout_marginStart="32dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -222,7 +228,7 @@
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:text="@string/min_s"/>
                     </LinearLayout>
-                </FrameLayout>
+                </LinearLayout>
 
 
                 <include layout="@layout/vertical_separator" />
